--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pandas
 tqdm
 cssutils
 beautifulsoup4==4.8.2
-fasttext-langdetect
-"langcodes[data]"
+fasttext-langdetect 
 flashtext
+streamlit
+pdfplumber
